--- a/sass/components/l10n_client/_l10n_client.scss
+++ b/sass/components/l10n_client/_l10n_client.scss
@@ -1,23 +1,27 @@
 /* l10n Client Styles */
 
 #l10n-client {
-  h2 { color: white; }
+  h2 {
+    border-left: none;
+    font-size: 1.2em;
+    color: white;
+    height: inherit;
+  }
   #l10n-client-form {
     .form-submit { display: inline; }
+    .form-textarea {
+      border-radius: inherit;
+      margin-top: 1em;
+      height: 15em;
+      width: 100%;
+    }
+  }
+  #l10n-client-search-form {
+    height: inherit;
   }
   .labels {
-    text-shadow:#222 0 1px 1px;
-    background-repeat:repeat-x;
-    background-image:-webkit-gradient(linear,50% 0,50% 100%,color-stop(0%,#666),color-stop(100%,#545454))!important;
-    background-image:-webkit-linear-gradient(#666,#545454)!important;
-    background-image:-moz-linear-gradient(#666,#545454)!important;
-    background-image:-o-linear-gradient(#666,#545454)!important;
-    background-image:linear-gradient(#666,#545454)!important;
-    @if $legacy-support-for-ie8 {
-      @include filter-gradient(#666, #545454);
-    }
-    .toggle {
-      background-color: #008fdc;
+    .label {
+      border: none;
     }
   }
 }
