--- a/sass/wetkit_core.scss
+++ b/sass/wetkit_core.scss
@@ -4,7 +4,6 @@
 
 // Import external libraries.
 @import "compass";
-@import "toolkit-no-css";
 
 // Import variables, abstractions, base styles and components using globbing.
 //
@@ -19,140 +18,3 @@
 // output any styles themselves: Importing them multiple times to resolve
 // dependencies shouldn't be a problem.
 @import "components/**/*";
-
-/* Global Navigation Bar Fixes */
-
-#navbar-actions,
-#navbar-user {
-  li {
-    border: none;
-  }
-}
-
-/* Revision Screen */
-
-.page-node-revisions {
-  div {
-    img.wetkit-image-half  {
-      float: none;
-      width: auto;
-    }
-  }
-}
-
-/* Panels Screen */
-
-.panel-portlet .grab-title {
-  background: #008fdc;
-}
-
-/* IPE Styles */
-
-.panels-ipe-newblock {
-  ul {
-    margin: 0px;
-  }
-  li {
-    padding: 0;
-    float: left;
-  }
-}
-
-.panels-ipe {
-  #l10n-client { bottom: 52px; z-index: 999; }
-}
-
-.overlay-open #l10n-client { bottom: 0px; }
-
-/* Panelizer Styles */
-
-#panelizer-settings-form {
-  .tabs {
-    position: relative;
-    right: 0px;
-  }
-}
-
-
-/* Fields */
-
-.views-widget-filter-vid {
-  clear: both;
-}
-
-#edit-menu-options-attributes-rel,
-#edit-menu-options-attributes-class {
-  width: 75%;
-}
-
-h1.node-edit-title {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-#node-edit {
-  .form-item-field-featured-image-und-0-title {
-    label {
-      font-weight: normal;
-      float: left;
-      margin: 4px 10px 0 0;
-    }
-  }
-  .form-item-field-archived-content-und {
-    margin-top: 0px;
-  }
-  #edit-field-featured-image-und-0-title {
-    width: 180px;
-    label {
-      font-weight: normal;
-      float: left;
-      margin: 4px 10px 0 0;
-    }
-  }
-}
-
-.pane-node-form-path .form-item .description {
-  display: none;
-}
-
-.ctools-collapsible-content .form-item {
-  margin-bottom: 0em;
-}
-
-.views-widget {
- .form-item-author {
-   .description {
-     display: none;
-   }
- }
-}
-
-/* CTools Collapsible Container */
-
-.ctools-collapsible-container {
-  h2 { background: #eee; padding: 5px; margin-bottom: 0;  color: #000 !important; font-size: 14px; font-weight: normal; @include border-top-radius(5px); }
-  .ctools-toggle-collapsed, .ctools-toggle { margin-top: 5px;  }
-  .page-node-edit fieldset { margin-top: 0; }
-}
-
-/* LinkIT jQuery UI Fixes */
-
-#linkit-modal {
-  background-color: #FFF;
-}
-
-/* Twitter Bean */
-
-.pane-bean-panels .wet-boew-webwidget {
-  a {
-    display: inline !important;
-    width: auto !important;
-    padding: 0px;
-  }
-}
-
-/* Devel */
-
-.krumo-version img {
-  width: auto;
-}
